# tp_py_aio_kafka_watcher

./: .pmfp_template.json  CHANGELOG.md  MANIFEST.in  README.md  docker-compose.yml  dockerfile  dockerfile.jinja  pmfprc.json  setup.cfg
sender/: app.py.jinja
tp_py_aio_kafka_watcher_sender/: app.py  sender.py
tp_py_aio_kafka_watcher_watcher/: app.py
watcher/: app.py.jinja
