[metadata]
name = tp_py_aio_kafka_watcher
version = 0.0.0
author = hsz12
author_email = 
description = 
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = 
license = MIT License
classifiers = 
	    License :: OSI Approved :: MIT License
	    Programming Language :: Python :: 3.7
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	    pyproxypattern >= 0.0.1
	    schema_entry >= 0.1.5
	    pyloggerhelper >= 0.0.2
	    python-snappy >= 0.6.0
	    lz4tools >= 3.1.1.2
	    xxhash >= 2.0.2
		gssapi >= 1.6.12
	    aiokafka >= 0.7.0
		uvloop >= 0.15.2

tests_require = 
	    coverage >= 5.5
	    mypy >= 0.800
	    autopep8 >= 1.5.6
	    pylint >= 2.8.0
	    pydocstyle>=6.0.0

[options.packages.find]
include = tp_py_aio_kafka_watcher
exclude = tests

